# soulfu

./: .gitignore  .rules  Makefile  Makefile.macos  Makefile.macos-amd64  Makefile.mingw64  README.md  common.mk  resource.rc  skybox_readme.md
.github/workflows/: nightly.yml  release.yml  test-macos-amd64.yml
datadir/: =BACKPACK.PCX  =RBUTTON.PCX  =RFRAME.PCX  =TITLEU.PCX  DEFINE.TXT  MAPGEN.SRC  MBUTTON.PCX  STANDARD.SRC  WCONTROL.SRC  WMAIN.SRC  WNETMAP.SRC  WSPLASH.SRC
language/: ENGLISH.txt  FRENCH.txt  GERMAN.txt  ITALIAN.txt  POLISH.txt  SPANISH.txt
packaging/: README.md  build_deb-amd64.sh  build_deb-i386.sh  build_linux-i386.sh  build_macos-amd64.sh  build_macos-arm64.sh  build_win32.sh  build_win64.sh  setup_macos_amd64_sysroot.sh  setup_macos_sysroot.sh  soulfu.desktop  soulfu.nsi
packaging/android/: .gitignore  build.gradle  build_android.sh  gradle.properties  settings.gradle  setup_deps.sh
packaging/android/app/: build.gradle
packaging/android/app/jni/: CMakeLists.txt
packaging/android/app/src/main/: AndroidManifest.xml
packaging/android/app/src/main/res/values/: strings.xml
packaging/niceware/: Manual.htm
server/: master_server  master_server.c
source/: charact.c  display.c  input.c  logfile.c  network.c  runsrc.c  soulfu.c  soulfu.h
